@@ -199,7 +199,7 @@ key alt+.;cursorBOV
 key ctrl+j;cursorReturn
 key ctrl+l;cursorReturn "forward"
 key alt+n            go_to_char
-key alt+p            scrollUp
+key alt+p            go_to_char_previous
 key esc up;scrollUp
 key esc [ 1 ; 3 A    scrollUp
 key esc [ 1 ; 5 A    scrollUp
