@@ -332,8 +332,24 @@ module Diakonos
           return cursor_to r, i
         end
 
-        r += 1
-        break  if r >= @lines.size
+      end
+    end
+
+    def go_to_char_previous( char )
+      r = @last_row
+      i = @lines[ r ].rindex( char, @last_col - 1 )
+      if i
+        return cursor_to r, i
+      end
+
+      loop do
+        r -= 1
+        break  if r < 0
+
+        i = @lines[ r ].rindex( char )
+        if i
+          return cursor_to r, i
+        end
       end
     end
 
