@@ -4,6 +4,7 @@ Diakonos Changelog
 0.8.10
 
 - Added go_to_char (Alt-N).
+- Added go_to_char_previous (Alt-P).
 
 0.8.9
 
